# CodeCraft2024-public

./: .gitignore  README.md
code/final/: CMakeLists.txt  berth.hpp  boat.hpp  boat_base.hpp  boat_list.hpp  boat_pos.hpp  good.hpp  llm.hpp  main.cpp  map.hpp  map_base.hpp  robot.hpp  robot_base.hpp  robot_list.hpp  schedule.hpp  scheduler.hpp  utils.hpp
code/preliminary/: berth.hpp  boat.hpp  good.hpp  main.cpp  map.hpp  robot.hpp  schedule.hpp  scheduler.hpp  utils.hpp
code/semifinal/: berth.hpp  boat.hpp  good.hpp  main.cpp  map.hpp  robot.hpp  schedule.hpp  scheduler.hpp  utils.hpp
docs/: bugs.txt
